--- a/archives.html
+++ b/archives.html
@@ -6,8 +6,8 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 
 		<!-- Metadata -->
-			<meta name="description" content="My ramblings and notes about binary analysis and software exploitation" />
-			<meta property="og:description" content="My ramblings and notes about binary analysis and software exploitation" />
+			<meta name="description" content="My ramblings and notes on binary analysis and general software security" />
+			<meta property="og:description" content="My ramblings and notes on binary analysis and general software security" />
 			<meta property="og:title" content="cyber tuna" />
 			<meta property="og:type" content="website" />
 			<meta property="og:url" content="" />
@@ -43,7 +43,7 @@
 				</a>
 			</h1>
 			<p class="lead"></p>
-			<p class="lead">My ramblings and notes about binary analysis and software exploitation </p>
+			<p class="lead">My ramblings and notes on binary analysis and general software security </p>
 			<p></p>
 		</div>
 		<nav class="sidebar-nav">
@@ -61,7 +61,7 @@
 
 <dl>
     <dt>Sat 02 May 2020</dt>
-    <dd><a href="/position-independent-code-pic.html">Position-Independent Code (PIC)</a></dd>
+    <dd><a href="/position-independent-code-pic-and-aslr.html">Position-Independent Code (PIC) and ASLR</a></dd>
 </dl>
 		</div>
 	</body>
