Final polish on pwnable.tw start writeup

--- a/authors.html
+++ b/authors.html
@@ -48,6 +48,7 @@
 		</div>
 		<nav class="sidebar-nav">
             <a class="sidebar-nav-item" href="/">Home</a>
+                <a class="sidebar-nav-item" href="/category/ctf.html"> CTF </a>
                 <a class="sidebar-nav-item" href="/category/notes.html"> Notes </a>
 					<a class="sidebar-nav-item" href="https://github.com/cyber-tuna">
 						<i class="fa fa-github"></i>
@@ -59,7 +60,7 @@
 </div>		<div class="content container">
     <h1>Authors on cyber tuna</h1>
     <ul>
-        <li><a href="/author/cybertuna.html">cybertuna</a> (1)</li>
+        <li><a href="/author/cybertuna.html">cybertuna</a> (2)</li>
     </ul>
 		</div>
 	</body>
