--- a/archives.html
+++ b/archives.html
@@ -48,6 +48,7 @@
 		</div>
 		<nav class="sidebar-nav">
             <a class="sidebar-nav-item" href="/">Home</a>
+                <a class="sidebar-nav-item" href="/category/ctf.html"> CTF </a>
                 <a class="sidebar-nav-item" href="/category/notes.html"> Notes </a>
 					<a class="sidebar-nav-item" href="https://github.com/cyber-tuna">
 						<i class="fa fa-github"></i>
@@ -60,6 +61,8 @@
 <h1>Archives for cyber tuna</h1>
 
 <dl>
+    <dt>Tue 19 May 2020</dt>
+    <dd><a href="/pwnabletw-challenge-1-start.html">Pwnable.tw Challenge 1 - Start</a></dd>
     <dt>Sat 02 May 2020</dt>
     <dd><a href="/position-independent-code-pic-and-aslr.html">Position-Independent Code (PIC) and ASLR</a></dd>
 </dl>
