--- a/categories.html
+++ b/categories.html
@@ -48,6 +48,7 @@
 		</div>
 		<nav class="sidebar-nav">
             <a class="sidebar-nav-item" href="/">Home</a>
+                <a class="sidebar-nav-item" href="/category/ctf.html"> CTF </a>
                 <a class="sidebar-nav-item" href="/category/notes.html"> Notes </a>
 					<a class="sidebar-nav-item" href="https://github.com/cyber-tuna">
 						<i class="fa fa-github"></i>
@@ -59,6 +60,7 @@
 </div>		<div class="content container">
     <h1>Categories on cyber tuna</h1>
     <ul>
+        <li><a href="/category/ctf.html">CTF</a> (1)</li>
         <li><a href="/category/notes.html">Notes</a> (1)</li>
     </ul>
 		</div>
