Added relocations article

--- a/archives.html
+++ b/archives.html
@@ -61,6 +61,8 @@
 <h1>Archives for cyber tuna</h1>
 
 <dl>
+    <dt>Sat 20 February 2021</dt>
+    <dd><a href="/linking-relocations.html">Linking - Relocations</a></dd>
     <dt>Sat 24 October 2020</dt>
     <dd><a href="/pwnablekr-uaf.html">Pwnable.kr uaf</a></dd>
     <dt>Sat 13 June 2020</dt>
